--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,10 @@ dependencies {
     implementation 'com.google.guava:guava:23.0'
     // Use JUnit and mockito test framework
     testImplementation 'junit:junit:4.12'
-    compile 'org.mockito:mockito-core:2.9.0'
+    testImplementation 'org.mockito:mockito-core:2.9.0'
     compile 'org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:1.0.2'
     compile 'com.microsoft.graph:microsoft-graph-core:0.1.0-SNAPSHOT'
+    compile 'com.microsoft.graph:microsoft-graph:1.1.0'
 }
 
 def pomConfig = {
