--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -58,7 +58,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$System.DefaultWorkingDirectory)'
+    SourceFolder: '$(System.DefaultWorkingDirectory)'
     Contents: |
       **/libs/*
       build.gradle
