--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.mockito:mockito-core:2.28.0'
     implementation 'org.apache.oltu.oauth2:org.apache.oltu.oauth2.client:1.0.2'
-    implementation 'com.microsoft.graph:microsoft-graph-core:1.+'
-    implementation 'com.microsoft.graph:microsoft-graph:2+'
+    implementation 'com.microsoft.graph:microsoft-graph-core:[1.0.0, 2.0.0)'
+    implementation 'com.microsoft.graph:microsoft-graph:[2.0.0, 3.0.0)'
 }
 
 def pomConfig = {
