--- a/.azure-pipelines/buildAndPackage.yml
+++ b/.azure-pipelines/buildAndPackage.yml
@@ -13,6 +13,7 @@ trigger:
     include:
       - src/*
     exclude:
+      - .gradle/wrapper
       - .gitignore
       - CONTRIBUTING.md
       - LICENSE
@@ -25,82 +26,12 @@ trigger:
 pr: none
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: windows-latest
 
 steps:
-- checkout: self
-  clean: true
-  fetchDepth: 1
-
-- task: securedevelopmentteam.vss-secure-development-tools.build-task-credscan.CredScan@2
-  displayName: 'Run CredScan'
-  inputs:
-    debugMode: false
-
-- pwsh: 'Invoke-WebRequest -Uri https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_windows_hotspot_15.0.2_7.zip -OutFile OpenJDK.zip'
-  displayName: 'Download JDK'
-
-- task: JavaToolInstaller@0
-  inputs:
-    versionSpec: '15'
-    jdkArchitectureOption: 'x64'
-    jdkSourceOption: 'LocalDirectory'
-    jdkFile: 'OpenJDK.zip'
-    jdkDestinationDirectory: 'binaries'
-
-- task: DownloadSecureFile@1
-  inputs:
-    secureFile: 'local.properties'
-
-- task: DownloadSecureFile@1
-  inputs:
-    secureFile: 'secring.gpg'
-
-- task: DownloadSecureFile@1
-  inputs:
-    secureFile: 'secring.gpg.lock'
-
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: '$(Agent.TempDirectory)'
-    Contents: '**'
-    TargetFolder: '$(System.DefaultWorkingDirectory)'
-
-- task: Gradle@2
-  inputs:
-    gradleWrapperFile: 'gradlew'
-    tasks: 'build'
-    publishJUnitResults: true
-    testResultsFiles: '**/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    sonarQubeRunAnalysis: false
-
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)'
-    Contents: |
-      **/libs/*
-      build.gradle
-      gradlew
-      gradlew.bat
-      settings.gradle
-      gradle.properties
-      **/gradle/wrapper/*
-      scripts/getLatestVersion.ps1
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/'
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
-
-- task: YodLabs.O365PostMessage.O365PostMessageBuild.O365PostMessageBuild@0
-  displayName: 'Graph Client Tooling pipeline fail notification'
-  inputs:
-    addressType: serviceEndpoint
-    serviceEndpointName: 'microsoftgraph pipeline status'
-    title: '$(Build.DefinitionName) failure notification'
-    text: 'This pipeline has failed. View the build details for further information. This is a blocking failure.'
-  condition: and(failed(), ne(variables['Build.Reason'], 'Manual'))
-  enabled: true
+- template: templates/checkout-and-credscan.yml
+- template: templates/install-java.yml
+- template: templates/secure-files.yml
+- template: templates/build.yml
+- template: templates/publish-artefacts.yml
+- template: templates/alert-failure.yml
